Restart Game Issue Fixed

--- a/Memory-game.html
+++ b/Memory-game.html
@@ -18,7 +18,7 @@
                <div class="game">
 
                </div>
-                <button class="restart-button" onclick="window.location.reload()">RESTART</button>
+                <button class="restart-button" onclick="window.location.reload()">Restart Game</button>
             </div>
         </div>
     </div>
